--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is some scripts i made to improve my samsung NP300E7A-S06 Notebook with Debian Squeeze installed
+This is some scripts i made to improve my samsung NP300E7A-S06 Notebook with Debian Squeeze installed (widely inspired from the Debian /etc/acpi contents)
